--- a/lab3/pages/kundkassa.html
+++ b/lab3/pages/kundkassa.html
@@ -17,14 +17,7 @@
 		</nav>
 	</header>
 </body>
-</br>
-</br>
 <article>
-</br>
-</br>
-</br>
-</br>
-</br>
 	<table>
 		<tr>
 			<td>produkt</td>
@@ -56,11 +49,7 @@
 		</form>
 		</tr>
 	</table>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
+</article>
 <footer>mohamed</footer>
 
 </html>
