--- a/lab3/pages/kvitto.html
+++ b/lab3/pages/kvitto.html
@@ -24,24 +24,19 @@
 </br>
 		<fieldset>
 		<legend>kvitto</legend>
+		<form>
 		<tr>
-			<td>produkt</td>
-			<td>antal</td>
-			<td>pris</td>
-			<td>frakt</td>
-			<td>att betala</td>
+			<td>produkt</td><td><td>12 fisketillbehör </td></br>
+			<td>antal</td><input type="number" required min="1" max="100" value="1"/></td></br>
+			<td>pris</td> 150:- </br>
+			<td>frakt</td> 29:- </br>
+			<td>att betala</td> 179:- </br>
 		</tr>
 		<tr>
 		<form action="kvitto.html">
-			<td>12 fisketillbehör </td>
-			<td><input type="number" required min="1" max="100" /></td>
-			<td><input type="pris"</td>
-			<td><input type="pris"</td>
-			<td><input type="pris"</td>
 		</form>
 		</tr>
 		</fieldset>
-<br/>
 <body>
 	<fieldset>
 		<legend>information</legend>
