--- a/lab3/pages/marknadsundersökning.html
+++ b/lab3/pages/marknadsundersökning.html
@@ -18,20 +18,18 @@
 	</header>
 </body>
 </br>
-</br>
-</br>
 <p>
 	marknadsundersökmimg
 </p>
 <body>
 <p>Är du?</p>
-<form method="post" action="mailto:moudy87@hotmail.se">
+<form method="post" action="mailto:moudy87@hot">
 <p>
 		<input type="radio" name="kön"
 		value="mini" />man<br/>
 		<input type="radio" name="kön"
 		value="maxi" />kvinna</p>
-		</p>
+</p>
 </form>
 <p>Bor du i?</p>
 <form method="post" action="mailto:moudy87@hotmail.se">
