--- a/lab3/pages/hem.html
+++ b/lab3/pages/hem.html
@@ -34,7 +34,7 @@
 	<p> 
 	150:-
 	</p>
-	<input type="number" required min="1" max="100"/ >
+	<input type="number" required min="1" max="100"/ value="1" />
 	<input type="submit" value="köp"/>
 	</form>
 	</fieldset>
@@ -49,7 +49,7 @@
 	<p> 
 	100:-
 	</p>
-	<input type="number" required min="1" max="100" />
+	<input type="number" required min="1" max="100" value="1" />
 	<input type="submit" value="köp"/>
 	</form>
 	</fieldset>
@@ -64,7 +64,7 @@
 	<p> 
 	600:-
 	</p>
-	<input type="number" required min="1" max="100" />
+	<input type="number" required min="1" max="100" value="1" />
 	<input type="submit" value="köp"/>
 	</form>
 	</fieldset>
@@ -79,7 +79,7 @@
 	<p> 
 	250:-
 	</p>
-	<input type="number" required min="1" max="100" />
+	<input type="number" required min="1" max="100" value="1" />
 	<input type="submit"  value="köp"/>
 	</form>
 	</fieldset>
