--- a/lab3/pages/hem.html
+++ b/lab3/pages/hem.html
@@ -4,6 +4,9 @@
 	<title>fisketillbehör</title>
 	<meta charset="utf-8"/>
 	<link href="../styles/style.css" rel="stylesheet"/>
+	<meta name="description" content="Free Web tutorials"/>
+	<meta name="keywords" content="HTML,CSS,XML,JavaScript"/>
+	<meta name="author" content="Hege Refsnes"/>
 </head>
 <body>
 	<header>
@@ -12,79 +15,61 @@
 				<li><a href="hem.html"> Hem </a></li>
 				<li><a href="kundkassa.html"> Kundkassa </a></li>
 				<li><a href="kvitto.html"> kvitto </a></li>
-				<li><a href="marknadsundersökmimg.html"> Marknadsundersökning </a></li>
+				<li><a href="marknadsundersökmimg.html"> Marknadsundersokning </a></li>
 			</ol>
 		</nav>
 	</header>
-</body>
 </br>
 <p>
+	<h1>lite om oss</h1>
 	Vi säljer alla fisketillbehör hitta rätt fisketillbehör hos oss fisketillbehör.</br>
 	Allt inom fisketillbehör, tafsar, beteslås, lekande, gäddgrepp och fiskeverktyg</br>
 	och mycket mer.
 </P>
-<body>
 	<fieldset> 
-	<legend>fisketillbehör1:</legend>  
-	<form action="kundkassa.html">
-	<img src="images.jpg"/>
-	<p>
-	12 fisketillbehör
-	</p>
-	<p> 
-	150:-
-	</p>
-	<input type="number" required min="1" max="100"/ value="1" />
-	<input type="submit" value="köp"/>
-	</form>
+			<legend>fisketillbehör1:</legend>  
+				<form action="kundkassa.html">
+					<img src="images.jpg"/>
+						<div> 12 fisketillbehör </div>
+						<div> 150:- </div>
+						<input type="number" required min="1" max="100"/ value="1" />
+						<input type="submit" value="köp"/>
+				</form>
 	</fieldset>
 
 	<fieldset> 
-	<legend>fisketillbehör2:</legend>  
-	<form action="kundkassa.html">
-	<img src="ladda ned (1).jpg"/>
-	<p>
-	olika fisketillbehör
-	</p>
-	<p> 
-	100:-
-	</p>
-	<input type="number" required min="1" max="100" value="1" />
-	<input type="submit" value="köp"/>
-	</form>
+			<legend>fisketillbehör2:</legend>  
+				<form action="kundkassa.html">
+					<img src="ladda ned (1).jpg"/>
+						<div>olika fisketillbehör</div>
+						<div> 100:- </div>
+						<input type="number" required min="1" max="100" value="1" />
+						<input type="submit" value="köp"/>
+				</form>
+			</fieldset>
+
+	<fieldset> 
+			<legend>fisketillbehör3:</legend>  
+				<form action="kundkassa.html">
+					<img src="ladda ned (2).jpg"/>
+						<div> fiskspö </div>
+						<div> 600:- </div>
+						<input type="number" required min="1" max="100" value="1" />
+						<input type="submit" value="köp"/>
+				</form>
 	</fieldset>
 
 	<fieldset> 
-	<legend>fisketillbehör3:</legend>  
-	<form action="kundkassa.html">
-	<img src="ladda ned (2).jpg"/>
-	<p>
-	fiskspö
-	</p>
-	<p> 
-	600:-
-	</p>
-	<input type="number" required min="1" max="100" value="1" />
-	<input type="submit" value="köp"/>
-	</form>
-	</fieldset>
-
-	<fieldset> 
-	<legend>fisketillbehör4:</legend>  
-	<form action="kundkassa.html">
-	<img src="ladda ned.jpg"/>
-	<p>
-	fiskelåda
-	</p>
-	<p> 
-	250:-
-	</p>
-	<input type="number" required min="1" max="100" value="1" />
-	<input type="submit"  value="köp"/>
-	</form>
+			<legend>fisketillbehör4:</legend>  
+				<form action="kundkassa.html">
+					<img src="ladda ned.jpg"/>
+						<div>fiskelåda</div>
+						<div> 250:-</div>
+						<input type="number" required min="1" max="100" value="1" />
+						<input type="submit"  value="köp"/>
+				</form>
 	</fieldset>
 </body>
-<br/>
-<br/>
+</br>
 <footer>mohamed</footer>
 </html>
