--- a/lab3/index.html
+++ b/lab3/index.html
@@ -3,7 +3,7 @@
 <head> 
 	<title>fisketillbehör</title>
 	<meta charset="utf-8"/>
-	<link href="../styles/style.css" rel="stylesheet"/>
+	<link href="styles/style.css" rel="stylesheet"/>
 	<meta name="description" content="Free Web tutorials"/>
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript"/>
 	<meta name="author" content="Hege Refsnes"/>
@@ -12,10 +12,10 @@
 	<header>
 		<nav>
 			<ol> 
-				<li><a href="hem.html"> Hem </a></li>
-				<li><a href="kundkassa.html"> Kundkassa </a></li>
-				<li><a href="kvitto.html"> kvitto </a></li>
-				<li><a href="marknadsundersökmimg.html"> Marknadsundersokning </a></li>
+				<li><a href="index.html"> Hem </a></li>
+				<li><a href="pages/kundkassa.html"> Kundkassa </a></li>
+				<li><a href="pages/kvitto.html"> kvitto </a></li>
+				<li><a href="pages/marknadsundersökning.html"> Marknadsundersökning </a></li>
 			</ol>
 		</nav>
 	</header>
@@ -28,8 +28,8 @@
 </P>
 	<fieldset> 
 			<legend>fisketillbehör1:</legend>  
-				<form action="kundkassa.html">
-					<img src="images.jpg"/>
+				<form action="pages/kundkassa.html">
+					<img src="images/images.jpg"/>
 						<div> 12 fisketillbehör </div>
 						<div> 150:- </div>
 						<input type="number" required min="1" max="100"/ value="1" />
@@ -39,8 +39,8 @@
 
 	<fieldset> 
 			<legend>fisketillbehör2:</legend>  
-				<form action="kundkassa.html">
-					<img src="ladda ned (1).jpg"/>
+				<form action="pages/kundkassa.html">
+					<img src="images/ladda ned (1).jpg"/>
 						<div>olika fisketillbehör</div>
 						<div> 100:- </div>
 						<input type="number" required min="1" max="100" value="1" />
@@ -50,8 +50,8 @@
 
 	<fieldset> 
 			<legend>fisketillbehör3:</legend>  
-				<form action="kundkassa.html">
-					<img src="ladda ned (2).jpg"/>
+				<form action="pages/kundkassa.html">
+					<img src="images/ladda ned (2).jpg"/>
 						<div> fiskspö </div>
 						<div> 600:- </div>
 						<input type="number" required min="1" max="100" value="1" />
@@ -61,8 +61,8 @@
 
 	<fieldset> 
 			<legend>fisketillbehör4:</legend>  
-				<form action="kundkassa.html">
-					<img src="ladda ned.jpg"/>
+				<form action="pages/kundkassa.html">
+					<img src="images/ladda ned.jpg"/>
 						<div>fiskelåda</div>
 						<div> 250:-</div>
 						<input type="number" required min="1" max="100" value="1" />
