--- a/lab3/pages/kundkassa.html
+++ b/lab3/pages/kundkassa.html
@@ -3,16 +3,16 @@
 <head> 
 	<title>fisketillbehör</title>
 	<meta charset="utf-8"/>
-	<link href="../styles/style.css" rel="stylesheet"/>
+	<link href="styles/style.css" rel="stylesheet"/>
 </head>
 <body>
 	<header>
 		<nav>
 			<ol> 
-				<li><a href="hem.html"> Hem </a></li>
-				<li><a href="kundkassa.html"> Kundkassa </a></li>
-				<li><a href="kvitto.html"> kvitto </a></li>
-				<li><a href="marknadsundersökmimg.html"> Marknadsundersökning </a></li>
+				<li><a href="../index.html"> Hem </a></li>
+				<li><a href="pages/kundkassa.html"> Kundkassa </a></li>
+				<li><a href="pages/kvitto.html"> kvitto </a></li>
+				<li><a href="pages/marknadsundersökning.html"> Marknadsundersökning </a></li>
 			</ol>
 		</nav>
 	</header>
