--- a/lab4/pages/Kvitto.html
+++ b/lab4/pages/Kvitto.html
@@ -1,12 +1,11 @@
 ﻿<!doctype html>
 <html>
 <head>
-	<title>Orientkoket</title>
+	<title>Orientköket</title>
 	<meta charset="utf-8"/>
 	<link href="../styles/style.css" rel="stylesheet"/>
 	<meta name="description" content="Free Web tutorials"/>
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript"/>
-	<meta name="author" content="Hege Refsnes"/>
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
