--- a/lab4/pages/Online beställning.html
+++ b/lab4/pages/Online beställning.html
@@ -6,7 +6,6 @@
 	<link href="../styles/style.css" rel="stylesheet"/>
 	<meta name="description" content="Free Web tutorials"/>
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript"/>
-	<meta name="author" content="Hege Refsnes"/>
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -35,6 +34,74 @@
 					</ul>
 				</section>
 			</header>
+			<div class="row">
+			<section class="col-sm-4">
+			<fieldset> 
+				<legend>falafelrulle:</legend>  
+					<form action="/pages/Kvitto.html">
+						<img src="../images/facebook.PNG"/>
+							<div>sallad,tomat,sås,persilja,falafel </div>
+							<div> 30:- </div>
+							<input type="number" required min="1" max="100"/ value="1" />
+							<input type="submit" value="beställ"/>
+					</form>
+			</fieldset>
+			<section class="col-sm-4">
+			<fieldset> 
+				<legend>döner kebab:</legend>  
+					<form action="/pages/Kvitto.html">
+						<img src="../images/döner.jpg"/>
+							<div>sallad,tomat,sås,kebab </div>
+							<div> 30:- </div>
+							<input type="number" required min="1" max="100"/ value="1" />
+							<input type="submit" value="beställ"/>
+					</form>
+			</fieldset>
+			<section class="col-sm-4">
+			<fieldset> 
+				<legend>falafel 12 st:</legend>  
+					<form action="/pages/Kvitto.html">
+						<img src="../images/falafel 12 st.jpg"/>
+							<div>sallad,tomat,sås,falafel </div>
+							<div> 60:- </div>
+							<input type="number" required min="1" max="100"/ value="1" />
+							<input type="submit" value="beställ"/>
+					</form>
+			</fieldset>
+			<div class="row">
+			<section class="col-sm-4">
+			<fieldset> 
+				<legend>kebab:</legend>  
+					<form action="/pages/Kvitto.html">
+						<img src="../images/kebeb 0.jpg"/>
+							<div>sallad,tomat,sås,kebab,pommes </div>
+							<div> 30:- </div>
+							<input type="number" required min="1" max="100"/ value="1" />
+							<input type="submit" value="köp"/>
+					</form>
+			</fieldset>
+			<section class="col-sm-4">
+			<fieldset> 
+				<legend>dricka:</legend>  
+					<form action="/pages/Kvitto.html">
+						<img src="../images/20160412_145818.jpg"/>
+							<div>fanta,cola,ramlösa </div>
+							<div> 10:- </div>
+							<input type="number" required min="1" max="100"/ value="1" />
+							<input type="submit" value="köp"/>
+					</form>
+			</fieldset>
+			<section class="col-sm-4">
+			<fieldset> 
+				<legend>kebabrulle:</legend>  
+					<form action="/pages/Kvitto.html">
+						<img src="../images/bästa kebab.PNG"/>
+							<div>sallad,tomat,sås,kebab </div>
+							<div> 50:- </div>
+							<input type="number" required min="1" max="100"/ value="1" />
+							<input type="submit" value="köp"/>
+					</form>
+			</fieldset>
 		</div>
 		
 </body>
