--- a/lab4/index.html
+++ b/lab4/index.html
@@ -22,10 +22,10 @@
 				<section class="col-sm-12">
 					<nav>
 						<ul> 
-								<li><a href="index.html"> Hem </a></li>
-								<li><a href="pages/Menyn.html"> Menyn </a></li>
-								<li><a href="pages/Online beställning.html"> Onlin beställning </a></li>
-								<li><a href="pages/Kvitto.html"> Kvitto </a></li>
+							<li><a href="index.html"> Hem </a></li>
+							<li><a href="pages/hitta oss.html"> hitta oss </a></li>
+							<li><a href="pages/Online beställning.html"> Onlin beställning </a></li>
+							<li><a href="pages/Kvitto.html"> Kvitto </a></li>
 						</ul>
 					</nav>
 				</section>
@@ -35,7 +35,7 @@
 			<section class="col-sm-6">
 			<fieldset> 
 				<legend>falafelrulle:</legend>  
-					<form action="/pages/Kvitto.html">
+					<form action="pages/Kvitto.html">
 						<img src="images/facebook.PNG"/>
 							<div>sallad,tomat,sås,persilja,falafel </div>
 							<div> 30:- </div>
@@ -46,7 +46,7 @@
 			<section class="col-sm-6">
 			<fieldset> 
 				<legend>kebabrulle:</legend>  
-					<form action="/pages/Kvitto.html">
+					<form action="pages/Kvitto.html">
 						<img src="images/bästa kebab.PNG"/>
 							<div>sallad,tomat,sås,kebab </div>
 							<div> 50:- </div>
