--- a/lab4/pages/Online beställning.html
+++ b/lab4/pages/Online beställning.html
@@ -18,27 +18,23 @@
 
 <body>
 		<div class="container">
-			<header class="row">
-				<section class="col-sm-3">
-					<ul> 
-						<li><a href="../index.html"> Hem </a></li>
-				</section>
-				<section class="col-sm-3">
-						<li><a href="Menyn.html"> Menyn </a></li>
-				</section>
-				<section class="col-sm-3">
-						<li><a href="Online beställning.html"> Onlin beställning </a></li>
-				</section>
-				<section class="col-sm-3">
-						<li><a href="Kvitto.html"> Kvitto </a></li>
-					</ul>
+		<header class="row">
+				<section class="col-sm-12">
+					<nav>
+						<ul> 
+								<li><a href="../index.html"> Hem </a></li>
+								<li><a href="hitta oss.html"> hitta oss </a></li>
+								<li><a href="Online beställning.html"> Onlin beställning </a></li>
+								<li><a href="Kvitto.html"> Kvitto </a></li>
+						</ul>
+					</nav>
 				</section>
 			</header>
 			<div class="row">
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>falafelrulle:</legend>  
-					<form action="/pages/Kvitto.html">
+					<form action="Kvitto.html">
 						<img src="../images/facebook.PNG"/>
 							<div>sallad,tomat,sås,persilja,falafel </div>
 							<div> 30:- </div>
@@ -49,7 +45,7 @@
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>döner kebab:</legend>  
-					<form action="/pages/Kvitto.html">
+					<form action="Kvitto.html">
 						<img src="../images/döner.jpg"/>
 							<div>sallad,tomat,sås,kebab </div>
 							<div> 30:- </div>
@@ -60,7 +56,7 @@
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>falafel 12 st:</legend>  
-					<form action="/pages/Kvitto.html">
+					<form action="Kvitto.html">
 						<img src="../images/falafel 12 st.jpg"/>
 							<div>sallad,tomat,sås,falafel </div>
 							<div> 60:- </div>
@@ -72,7 +68,7 @@
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>kebab:</legend>  
-					<form action="/pages/Kvitto.html">
+					<form action="Kvitto.html">
 						<img src="../images/kebeb 0.jpg"/>
 							<div>sallad,tomat,sås,kebab,pommes </div>
 							<div> 30:- </div>
@@ -83,7 +79,7 @@
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>dricka:</legend>  
-					<form action="/pages/Kvitto.html">
+					<form action="Kvitto.html">
 						<img src="../images/20160412_145818.jpg"/>
 							<div>fanta,cola,ramlösa </div>
 							<div> 10:- </div>
@@ -94,7 +90,7 @@
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>kebabrulle:</legend>  
-					<form action="/pages/Kvitto.html">
+					<form action="Kvitto.html">
 						<img src="../images/bästa kebab.PNG"/>
 							<div>sallad,tomat,sås,kebab </div>
 							<div> 50:- </div>
@@ -105,4 +101,11 @@
 		</div>
 		
 </body>
+		<footer>
+				<ul>
+					<li>tn: 07654377655</li>
+					<li>Email: kok@hotmail.se</li>
+					<li>fax: 8365</li>
+				</ul>
+		</footer>
 </html>
