--- a/lab4/pages/Kvitto.html
+++ b/lab4/pages/Kvitto.html
@@ -18,23 +18,59 @@
 
 <body>
 		<div class="container">
-			<header class="row">
-				<section class="col-sm-3">
-					<ul> 
-						<li><a href="../index.html"> Hem </a></li>
-				</section>
-				<section class="col-sm-3">
-						<li><a href="Menyn.html"> Menyn </a></li>
-				</section>
-				<section class="col-sm-3">
-						<li><a href="Online beställning.html"> Online beställning </a></li>
-				</section>
-				<section class="col-sm-3">
-						<li><a href="Kvitto.html"> Kvitto </a></li>
-					</ul>
+		<header class="row">
+				<section class="col-sm-12">
+					<nav>
+						<ul> 
+								<li><a href="../index.html"> Hem </a></li>
+								<li><a href="hitta oss.html"> hitta oss </a></li>
+								<li><a href="Online beställning.html"> Onlin beställning </a></li>
+								<li><a href="Kvitto.html"> Kvitto </a></li>
+						</ul>
+					</nav>
 				</section>
 			</header>
-		</div>
+			<div class="row">
+			<section class="col-sm-12">
+				<fieldset>
+					<legend>kvitto</legend>
+						<form>
+							<tr>
+			<td>din beställning</td></br>
+			<td>falafelrulle</td><input type="number" required min="1" max="100" value="1"/></td></br>
+			<td>pris</td> 30:- </br>
+							</tr>
+						</form>
+				</fieldset>
+
+</br>
+	<div class="container">
+		<header class="row">
+				<section class="col-sm-12">
+					<fieldset>
+						<legend>information</legend>
+							<form>
+								<label for="Namn">Namn</label>
+									<input name="Namn" required="required" id="Namn" /><br/>
+		
+								<label for="eNamn">efternamn</label>
+									<input name="eNamn" required="required" id="eNamn" /><br/>
+		
+								<label for="mail">Mail</label>
+									<input type="email" required="repuired" id="mail" /><br/>
+									<input type="submit"/>
+							</form>
+					</fieldset>
+				</section>
+		</header>
+	</div>
 		
 </body>
+		<footer>
+				<ul>
+					<li>tn: 07654377655</li>
+					<li>Email: kok@hotmail.se</li>
+					<li>fax: 8365</li>
+				</ul>
+		</footer>
 </html>
