--- a/lab4/pages/hitta oss.html
+++ b/lab4/pages/hitta oss.html
@@ -17,24 +17,35 @@
 </head>
 
 <body>
-		<div class="container">
-			<header class="row">
-				<section class="col-sm-3">
-					<ul> 
-						<li><a href="../index.html"> Hem </a></li>
+<div class="container">
+		<header class="row">
+				<section class="col-sm-12">
+					<nav>
+						<ul> 
+							<li><a href="../index.html"> Hem </a></li>
+							<li><a href="hitta oss.html"> hitta oss </a></li>
+							<li><a href="Online beställning.html"> Onlin beställning </a></li>
+							<li><a href="Kvitto.html"> Kvitto </a></li>
+						</ul>
+					</nav>
 				</section>
-				<section class="col-sm-3">
-						<li><a href="Menyn.html"> Menyn </a></li>
-				</section>
-				<section class="col-sm-3">
-						<li><a href="Online beställning.html"> Online beställning </a></li>
-				</section>
-				<section class="col-sm-3">
-						<li><a href="Kvitto.html"> Kvitto </a></li>
-					</ul>
-				</section>
-			</header>
-		</div>
+		</header>
+		<div class="row">
+			<section class="row">
+				<article>
+					<img src="../images/map1.PNG"/> </br>
+					Vi finns utanför orienthallen på pukhusgatan
+					<a href="https://www.google.se/maps/place/Packhusgatan,+Uddevalla/@58.344191,11.9286454,497m/data=!3m1!1e3!4m2!3m1!1s0x46450fe1cbee7e69:0xc3a4dc0e2aca87c1"> <input type="submit" value="hitta oss här"/> </a> </br>
+				</article>
+			</section>
+</div>
 		
 </body>
+		<footer>
+				<ul>
+					<li>tn: 07654377655</li>
+					<li>Email: kok@hotmail.se</li>
+					<li>fax: 8365</li>
+				</ul>
+		</footer>
 </html>
