--- a/lab4/index.html
+++ b/lab4/index.html
@@ -43,6 +43,7 @@
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
+			</section>
 			<section class="col-sm-6">
 			<fieldset> 
 				<legend>kebabrulle:</legend>  
@@ -54,6 +55,8 @@
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
+		</div>
+			</section>
 		
 			<section class="row">
 					<article class="col-sm-12">
@@ -63,14 +66,15 @@
 					</article>
 			</section>
 		</div>
+			<section class="row">
+				<footer class="col-sm-12">
+					<ul>
+						<li>tn: 07654377655</li>
+						<li>Email: kok@hotmail.se</li>
+						<li>fax: 8365</li>
+					</ul>
+				</footer>
+			</section>
 </body>
-
-		<footer>
-				<ul>
-					<li>tn: 07654377655</li>
-					<li>Email: kok@hotmail.se</li>
-					<li>fax: 8365</li>
-				</ul>
-		</footer>
 
 </html>
