--- a/lab4/pages/Online beställning.html
+++ b/lab4/pages/Online beställning.html
@@ -42,6 +42,8 @@
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
+			</section>
+			</div>
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>döner kebab:</legend>  
@@ -53,6 +55,7 @@
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
+			</div>
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>falafel 12 st:</legend>  
@@ -101,7 +104,7 @@
 		</div>
 		
 </body>
-		<footer>
+		<footer class="col-sm-12">
 				<ul>
 					<li>tn: 07654377655</li>
 					<li>Email: kok@hotmail.se</li>
