--- a/lab4/index.html
+++ b/lab4/index.html
@@ -30,9 +30,10 @@
 					</nav>
 				</section>
 		</header>
+	</div>
 		
 		<div class="row">
-			<section class="col-sm-6">
+			<section class="col-sm-4">
 			<fieldset> 
 				<legend>falafelrulle:</legend>  
 					<form action="pages/Kvitto.html">
@@ -44,7 +45,15 @@
 					</form>
 			</fieldset>
 			</section>
-			<section class="col-sm-6">
+			<section class="col-sm-4">
+			<fieldset> 
+				<legend>Välkommen</legend>  
+					<form action="pages/Online beställning.html">
+						<img src="images/orient.PNG"/>
+					</form>
+			</fieldset>
+			</section>
+			<section class="col-sm-4">
 			<fieldset> 
 				<legend>kebabrulle:</legend>  
 					<form action="pages/Kvitto.html">
@@ -55,26 +64,38 @@
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
-		</div>
 			</section>
+		</div>
+			
 		
-			<section class="row">
-					<article class="col-sm-12">
-						<form action="pages/Onlin beställning.html">
-						<input type="submit" class="online" value="BESTÄLL ONLINE">
+		<div class="row">
+			<section class="col-sm-12">
+						<form action="pages/Online beställning.html">
+						<input type="submit" class="online" value="BESTÄLL ONLINE"/>
 						</form>
-					</article>
 			</section>
 		</div>
-			<section class="row">
-				<footer class="col-sm-12">
+		<div class="row">
+			<section class="col-sm-12">
+				<h2>video</h2>
+				<p>
+				<video controls>
+				<source src="images/VID-20160318-WA0000.mp4" type="video/mp4">
+				<source src="images/VID-20160318-WA0000.ogg" type="video/ogg">
+				Your browser does not support the video tag.
+				</video>
+				</p>
+			</section>
+		</div>
+			<footer class="row">
+				<section class="col-sm-12">
 					<ul>
 						<li>tn: 07654377655</li>
 						<li>Email: kok@hotmail.se</li>
 						<li>fax: 8365</li>
 					</ul>
-				</footer>
-			</section>
+				</section>
+			</footer>
 </body>
 
 </html>
