--- a/lab4/pages/Online beställning.html
+++ b/lab4/pages/Online beställning.html
@@ -30,7 +30,7 @@
 					</nav>
 				</section>
 			</header>
-			<div class="row">
+		<div class="row">
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>falafelrulle:</legend>  
@@ -43,7 +43,6 @@
 					</form>
 			</fieldset>
 			</section>
-			</div>
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>döner kebab:</legend>  
@@ -55,7 +54,7 @@
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
-			</div>
+			</section>
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>falafel 12 st:</legend>  
@@ -67,6 +66,8 @@
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
+			</section>
+		</div>
 			<div class="row">
 			<section class="col-sm-4">
 			<fieldset> 
@@ -79,6 +80,7 @@
 							<input type="submit" value="köp"/>
 					</form>
 			</fieldset>
+			</section>
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>dricka:</legend>  
@@ -90,6 +92,7 @@
 							<input type="submit" value="köp"/>
 					</form>
 			</fieldset>
+			</section>
 			<section class="col-sm-4">
 			<fieldset> 
 				<legend>kebabrulle:</legend>  
@@ -101,9 +104,8 @@
 							<input type="submit" value="köp"/>
 					</form>
 			</fieldset>
+			</section>
 		</div>
-		
-</body>
 		<footer class="col-sm-12">
 				<ul>
 					<li>tn: 07654377655</li>
@@ -111,4 +113,5 @@
 					<li>fax: 8365</li>
 				</ul>
 		</footer>
+</body>
 </html>
