--- a/lab4/pages/hitta oss.html
+++ b/lab4/pages/hitta oss.html
@@ -31,16 +31,14 @@
 				</section>
 		</header>
 		<div class="row">
-			<section class="row">
+			<section class="col-sm-12">
 				<article>
 					<img src="../images/map1.PNG"/> </br>
 					Vi finns utanför orienthallen på pukhusgatan
 					<a href="https://www.google.se/maps/place/Packhusgatan,+Uddevalla/@58.344191,11.9286454,497m/data=!3m1!1e3!4m2!3m1!1s0x46450fe1cbee7e69:0xc3a4dc0e2aca87c1"> <input type="submit" value="hitta oss här"/> </a> </br>
 				</article>
 			</section>
-</div>
-		
-</body>
+		</div>
 		<footer>
 				<ul>
 					<li>tn: 07654377655</li>
@@ -48,4 +46,5 @@
 					<li>fax: 8365</li>
 				</ul>
 		</footer>
+</body>
 </html>
