--- a/lab4/index.html
+++ b/lab4/index.html
@@ -30,8 +30,6 @@
 					</nav>
 				</section>
 		</header>
-	</div>
-		
 		<div class="row">
 			<section class="col-sm-4">
 			<fieldset> 
@@ -40,7 +38,7 @@
 						<img src="images/facebook.PNG"/>
 							<div>sallad,tomat,sås,persilja,falafel </div>
 							<div> 30:- </div>
-							<input type="number" required min="1" max="100"/ value="1" />
+							<input type="number" required min="1" max="100"/ value="1"/>
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
@@ -50,6 +48,8 @@
 				<legend>Välkommen</legend>  
 					<form action="pages/Online beställning.html">
 						<img src="images/orient.PNG"/>
+						<form action="pages/Online beställning.html">
+						<input type="submit" class="online" value="BESTÄLL ONLINE"/>
 					</form>
 			</fieldset>
 			</section>
@@ -66,36 +66,29 @@
 			</fieldset>
 			</section>
 		</div>
-			
-		
 		<div class="row">
 			<section class="col-sm-12">
-						<form action="pages/Online beställning.html">
-						<input type="submit" class="online" value="BESTÄLL ONLINE"/>
-						</form>
-			</section>
-		</div>
-		<div class="row">
-			<section class="col-sm-12">
-				<h2>video</h2>
+				<h1>video</h1>
 				<p>
 				<video controls>
 				<source src="images/VID-20160318-WA0000.mp4" type="video/mp4">
 				<source src="images/VID-20160318-WA0000.ogg" type="video/ogg">
-				Your browser does not support the video tag.
 				</video>
 				</p>
 			</section>
 		</div>
-			<footer class="row">
+			<div class="row">
 				<section class="col-sm-12">
+				<footer>
 					<ul>
 						<li>tn: 07654377655</li>
 						<li>Email: kok@hotmail.se</li>
 						<li>fax: 8365</li>
+						<li>facebook</li>
 					</ul>
+				</footer>
 				</section>
-			</footer>
+			</div>
 </body>
 
 </html>
