--- a/lab4/pages/Online beställning.html
+++ b/lab4/pages/Online beställning.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-		<div class="container">
+	<div class="container">
 		<header class="row">
 				<section class="col-sm-12">
 					<nav>
@@ -111,6 +111,7 @@
 					<li>tn: 07654377655</li>
 					<li>Email: kok@hotmail.se</li>
 					<li>fax: 8365</li>
+					<li>facebook</li>
 				</ul>
 		</footer>
 </body>
