--- a/lab4/pages/hitta oss.html
+++ b/lab4/pages/hitta oss.html
@@ -44,6 +44,7 @@
 					<li>tn: 07654377655</li>
 					<li>Email: kok@hotmail.se</li>
 					<li>fax: 8365</li>
+					<li>facebook</li>
 				</ul>
 		</footer>
 </body>
