--- a/lab4/pages/Online beställning.html
+++ b/lab4/pages/Online beställning.html
@@ -106,13 +106,18 @@
 			</fieldset>
 			</section>
 		</div>
-		<footer class="col-sm-12">
-				<ul>
-					<li>tn: 07654377655</li>
-					<li>Email: kok@hotmail.se</li>
-					<li>fax: 8365</li>
-					<li>facebook</li>
-				</ul>
-		</footer>
+			<div class="row">
+				<section class="col-sm-12">
+				<footer>
+					<ul>
+						<li>tn: 07654377655</li>
+						<li>Email: kok@hotmail.se</li>
+						<li>fax: 8365</li>
+						<li>facebook</li>
+					</ul>
+				</footer>
+				</section>
+			</div>
+		</div>
 </body>
 </html>
