--- a/lab4/pages/Kvitto.html
+++ b/lab4/pages/Kvitto.html
@@ -45,24 +45,22 @@
 				</section>
 			</div>
 		<div class="row">
-		<header>	
-				<section class="col-sm-12">
+				<header class="col-sm-12">
 					<fieldset>
 						<legend>information</legend>
 							<form>
 								<label for="Namn">Namn</label>
-									<input name="Namn" required="required" id="Namn" /></br>
+									<input name="Namn" required="required" id="Namn" /><br/>
 		
 								<label for="eNamn">efternamn</label>
-									<input name="eNamn" required="required" id="eNamn" /></br/>
+									<input name="eNamn" required="required" id="eNamn" /><br/>
 		
 								<label for="mail">Mail</label>
 									<input type="email" required="repuired" id="mail" /><br/>
 									<input type="submit"/>
 							</form>
 					</fieldset>
-				</section>
-		</header>
+				</header>
 		</div>
 			<div class="row">
 				<section class="col-sm-12">
