--- a/lab4/pages/hitta oss.html
+++ b/lab4/pages/hitta oss.html
@@ -34,10 +34,10 @@
 				<article class="col-sm-9">
 					<img src="../images/map1.PNG"/> </br>
 					<p>Vi finns utanför orienthallen på pukhusgatan</p>
-					<a href="https://www.google.se/maps/place/Packhusgatan,+Uddevalla/@58.344191,11.9286454,497m/data=!3m1!1e3!4m2!3m1!1s0x46450fe1cbee7e69:0xc3a4dc0e2aca87c1"> <input type="submit" value="hitta oss här"/> </a> </br>
-				</article>
+					<a href="https://www.google.se/maps/place/Packhusgatan,+Uddevalla/@58.344191,11.9286454,497m/data=!3m1!1e3!4m2!3m1!1s0x46450fe1cbee7e69:0xc3a4dc0e2aca87c1"> <input type="submit" class="online" value="hitta oss här"/> </a> </br>
+				</article></br>
 				<aside class="col-sm-3">
-					<h2>kundomdömme</h2>
+					<div>kundomdömme</div>
 					<img src="../images/bäst.jpg"/>
 					bästa falafel rulle
 					<img src="../images/IMG-20160212-WA0007.jpg"/>
@@ -46,6 +46,14 @@
 					tack
 				</aside>
 		</div>
+			<div class="row">
+				<figure class="col-sm-12">
+				<img src="../images/orient.PNG" />
+				<figcaption>utanför orienthallen ring och beställning
+				t.n 0522-54753
+				</figcaption>
+				</figure>
+			</div>
 			<div class="row">
 				<footer class="col-sm-12">
 					<ul>
