--- a/lab4/index.html
+++ b/lab4/index.html
@@ -4,7 +4,6 @@
 	<title>Orientköket</title>
 	<meta charset="utf-8"/>
 	<link href="styles/style.css" rel="stylesheet"/>
-	<meta name="description" content="Free Web tutorials"/>
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript"/>
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -38,7 +37,7 @@
 						<img src="images/facebook.PNG"/>
 							<div>sallad,tomat,sås,persilja,falafel </div>
 							<div> 30:- </div>
-							<input type="number" required min="1" max="100"/ value="1"/>
+							<input type="number" required min="1" max="100" value="1"/>
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
@@ -60,7 +59,7 @@
 						<img src="images/bästa kebab.PNG"/>
 							<div>sallad,tomat,sås,kebab </div>
 							<div> 50:- </div>
-							<input type="number" required min="1" max="100"/ value="1" />
+							<input type="number" required min="1" max="100" value="1" />
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
@@ -71,8 +70,10 @@
 				<h1>video</h1>
 				<p>
 				<video controls>
-				<source src="images/VID-20160318-WA0000.mp4" type="video/mp4">
-				<source src="images/VID-20160318-WA0000.ogg" type="video/ogg">
+				<source src="../MEDIA-FILER/MrBean.webm" type="video/wbm"/>
+				<source src="../MEDIA-FILER/MrBean.ogv" type="video/ogg"/>
+				<source src="../MEDIA-FILER/MrBean.mp4" type="video/mp4"/>
+				update your browser to somthing modern that supports HTML5!
 				</video>
 				</p>
 			</section>
@@ -81,10 +82,10 @@
 				<section class="col-sm-12">
 				<footer>
 					<ul>
-						<li>tn: 07654377655</li>
+						<li>T.n: 07654377655</li>
 						<li>Email: kok@hotmail.se</li>
-						<li>fax: 8365</li>
-						<li>facebook</li>
+						<li>Fax: 8365</li>
+						<li>Facebook</li>
 					</ul>
 				</footer>
 				</section>
