--- a/lab4/pages/Online beställning.html
+++ b/lab4/pages/Online beställning.html
@@ -4,7 +4,6 @@
 	<title>Orientkoket</title>
 	<meta charset="utf-8"/>
 	<link href="../styles/style.css" rel="stylesheet"/>
-	<meta name="description" content="Free Web tutorials"/>
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript"/>
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -38,7 +37,7 @@
 						<img src="../images/facebook.PNG"/>
 							<div>sallad,tomat,sås,persilja,falafel </div>
 							<div> 30:- </div>
-							<input type="number" required min="1" max="100"/ value="1" />
+							<input type="number" required min="1" max="100" value="1" />
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
@@ -50,7 +49,7 @@
 						<img src="../images/döner.jpg"/>
 							<div>sallad,tomat,sås,kebab </div>
 							<div> 30:- </div>
-							<input type="number" required min="1" max="100"/ value="1" />
+							<input type="number" required min="1" max="100" value="1" />
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
@@ -62,7 +61,7 @@
 						<img src="../images/falafel 12 st.jpg"/>
 							<div>sallad,tomat,sås,falafel </div>
 							<div> 60:- </div>
-							<input type="number" required min="1" max="100"/ value="1" />
+							<input type="number" required min="1" max="100" value="1" />
 							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
@@ -76,8 +75,8 @@
 						<img src="../images/kebeb 0.jpg"/>
 							<div>sallad,tomat,sås,kebab,pommes </div>
 							<div> 30:- </div>
-							<input type="number" required min="1" max="100"/ value="1" />
-							<input type="submit" value="köp"/>
+							<input type="number" required min="1" max="100" value="1" />
+							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
 			</section>
@@ -85,11 +84,11 @@
 			<fieldset> 
 				<legend>dricka:</legend>  
 					<form action="Kvitto.html">
-						<img src="../images/20160412_145818.jpg"/>
+						<img src="../images/20160412_145818 .jpg"/>
 							<div>fanta,cola,ramlösa </div>
 							<div> 10:- </div>
-							<input type="number" required min="1" max="100"/ value="1" />
-							<input type="submit" value="köp"/>
+							<input type="number" required min="1" max="100" value="1" />
+							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
 			</section>
@@ -100,8 +99,8 @@
 						<img src="../images/bästa kebab.PNG"/>
 							<div>sallad,tomat,sås,kebab </div>
 							<div> 50:- </div>
-							<input type="number" required min="1" max="100"/ value="1" />
-							<input type="submit" value="köp"/>
+							<input type="number" required min="1" max="100" value="1" />
+							<input type="submit" value="beställ"/>
 					</form>
 			</fieldset>
 			</section>
