--- a/lab4/pages/hitta oss.html
+++ b/lab4/pages/hitta oss.html
@@ -4,7 +4,6 @@
 	<title>Orientkoket</title>
 	<meta charset="utf-8"/>
 	<link href="../styles/style.css" rel="stylesheet"/>
-	<meta name="description" content="Free Web tutorials"/>
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript"/>
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -41,7 +40,7 @@
 					<img src="../images/bäst.jpg"/>
 					bästa falafel rulle
 					<img src="../images/IMG-20160212-WA0007.jpg"/>
-					bra mötande
+					bra bemötande
 					<img src="../images/bäst.jpg"/>
 					tack
 				</aside>
