--- a/lab4/pages/Kvitto.html
+++ b/lab4/pages/Kvitto.html
@@ -4,7 +4,6 @@
 	<title>Orientköket</title>
 	<meta charset="utf-8"/>
 	<link href="../styles/style.css" rel="stylesheet"/>
-	<meta name="description" content="Free Web tutorials"/>
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript"/>
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -61,6 +60,13 @@
 							</form>
 					</fieldset>
 				</header>
+		</div>
+		<div class="row">
+				<section class="col-sm-12">
+					<img src="../images/tack s.PNG" class="tack"> </br>
+				<article>
+					
+				</section>
 		</div>
 			<div class="row">
 				<section class="col-sm-12">
